--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Acerca de mi</h2>
+                    <h2>Acerca de mi </h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Algo sobre mi</p>
+                    <p>Soy una persona que disfruta mucho jugar BasketBall</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Algo sobre mi</p>
+                    <p>Jugar VideoJuegos e ir a correr en las tardes, sin dejar a un lado la programacion</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
