--- a/index.html
+++ b/index.html
@@ -243,27 +243,27 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>4</h3>
-                        <p>Nuestra direccion
-                            <br>Nuestra direccion</p>
+                        <h3>Direccion</h3>
+                        <p>Vivo con mi gfa viendo mimos de la grasa >:v
+                            <br>#HailGrasa prro AU AU :v</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>5</h3>
+                        <h3>Redes Sociales</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.Facebook.com/mario.alan.merel" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://www.twitter.com/MarioMerel1" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>6</h3>
-                        <p>Acerca de este sitio web</p>
+                        <h3>Acerca de sitio</h3>
+                        <p>Proyecto de taller de Git</p>
                     </div>
                 </div>
             </div>
