Imagen de perfil de la pagina actualizada

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" width="256px" height="256px" style="border-radius: 50%" alt="Mi foto">
+                    <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/736x/16/64/c5/1664c50e43535640ec7cc40d49b0b017.jpg" width="256px" height="256px" style="border-radius: 50%" alt="Mi foto">
                     <div class="intro-text">
                         <h1 class="name">Mario Alan Merel</h1>
                         <hr class="star-light">
